--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <form id="formClima">
       <label for="cityInput">Cidade:</label>
       <input type="text" id="cityInput" name="cityInput"> <br>
-      <button type="submit">consultar</button>
+      <button type="submit">Consultar</button>
   </form>
   
   <div id="climaResult"></div>
