--- a/index.html
+++ b/index.html
@@ -49,19 +49,100 @@ console.log(city);
 				}
 
         if (data.Clima.includes('Nubladas')) {
-					document.documentElement.style.setProperty('--color-bg1', '#373e42'); // Define a cor de fundo 1 como azul
-					document.documentElement.style.setProperty('--color-bg2', '#5d6061'); // Define a cor de fundo 2 como amarelo
+					document.documentElement.style.setProperty('--color-bg1', '#373e42'); 
+					document.documentElement.style.setProperty('--color-bg2', '#5d6061'); 
 				}
 
         if (data.Clima.includes('Nuvens dispersas')) {
-					document.documentElement.style.setProperty('--color-bg1', '#63b1db'); // Define a cor de fundo 1 como azul
-					document.documentElement.style.setProperty('--color-bg2', '#286382'); // Define a cor de fundo 2 como amarelo
+					document.documentElement.style.setProperty('--color-bg1', '#63b1db'); 
+					document.documentElement.style.setProperty('--color-bg2', '#286382'); 
 				}
 
         if (data.Clima.includes('Poucas nuvens')) {
-					document.documentElement.style.setProperty('--color-bg1', '#2b8abd'); // Define a cor de fundo 1 como azul
-					document.documentElement.style.setProperty('--color-bg2', '#20aaf5'); // Define a cor de fundo 2 como amarelo
+					document.documentElement.style.setProperty('--color-bg1', '#2b8abd'); 
+					document.documentElement.style.setProperty('--color-bg2', '#20aaf5'); 
 				}
+
+        if (data.Clima.includes('Tempestade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#485063'); 
+					document.documentElement.style.setProperty('--color-bg2', '#393d45'); 
+				}
+
+        if (data.Clima.includes('Tempestade com chuva leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#7188bd'); 
+					document.documentElement.style.setProperty('--color-bg2', '#6d95f2'); 
+				}
+
+        if (data.Clima.includes('Tempestade com chuva')) {
+					document.documentElement.style.setProperty('--color-bg1', '#5b6b8f'); 
+					document.documentElement.style.setProperty('--color-bg2', '#2d3a59'); 
+				}
+
+        if (data.Clima.includes('Tempestade com chuva intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#1153ed'); 
+					document.documentElement.style.setProperty('--color-bg2', '#10285e'); 
+				}
+
+        if (data.Clima.includes('Tempestade leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#3f89ba'); 
+					document.documentElement.style.setProperty('--color-bg2', '#096db0'); 
+				}
+
+        if (data.Clima.includes('Tempestade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#568db3'); 
+					document.documentElement.style.setProperty('--color-bg2', '#91c2e3'); 
+				}
+
+        if (data.Clima.includes('Tempestade intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#042338'); 
+					document.documentElement.style.setProperty('--color-bg2', '#032c80'); 
+				}
+
+        if (data.Clima.includes('Tempestade irregular')) {
+					document.documentElement.style.setProperty('--color-bg1', '#32466e'); 
+					document.documentElement.style.setProperty('--color-bg2', '#4d6cab'); 
+				}
+
+        if (data.Clima.includes('Tempestade com garoa leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#91a2c2'); 
+					document.documentElement.style.setProperty('--color-bg2', '#637fb8'); 
+				}
+
+        if (data.Clima.includes('Tempestade com garoa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#3e62a8'); 
+					document.documentElement.style.setProperty('--color-bg2', '#708cc2'); 
+				}
+
+        if (data.Clima.includes('Tempestade com garoa intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#62578f'); 
+					document.documentElement.style.setProperty('--color-bg2', '#362770'); 
+				}
+
+        if (data.Clima.includes('Garoa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#5f46c2'); 
+					document.documentElement.style.setProperty('--color-bg2', '#6a45ff'); 
+				}
+
+        if (data.Clima.includes('Garoa de alta intensidade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#200396'); 
+					document.documentElement.style.setProperty('--color-bg2', '#150652'); 
+				}
+
+        if (data.Clima.includes('Chuva garoando de baixa intensidade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#3c61bd'); 
+					document.documentElement.style.setProperty('--color-bg2', '#5d87f0'); 
+				}
+
+        if (data.Clima.includes('Chuva garoando')) {
+					document.documentElement.style.setProperty('--color-bg1', '#708edb'); 
+					document.documentElement.style.setProperty('--color-bg2', '#465e99'); 
+				}
+
+        if (data.Clima.includes('Chuva garoando de alta intensidade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#3969e3'); 
+					document.documentElement.style.setProperty('--color-bg2', '#1b43a8'); 
+				}
+
               }else{
                   tempoResult.innerHTML = "Erro ao obter dados metereologicó";
               }
