--- a/index.html
+++ b/index.html
@@ -143,6 +143,121 @@ console.log(city);
 					document.documentElement.style.setProperty('--color-bg2', '#1b43a8'); 
 				}
 
+        if (data.Clima.includes('Chuva forte e garoa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#7ecad6'); 
+					document.documentElement.style.setProperty('--color-bg2', '#77999e'); 
+				}
+
+        if (data.Clima.includes('Chuva forte e garoa intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#0ecbe8'); 
+					document.documentElement.style.setProperty('--color-bg2', '#096270'); 
+				}
+
+        if (data.Clima.includes('Garoa forte')) {
+					document.documentElement.style.setProperty('--color-bg1', '#92e8e5'); 
+					document.documentElement.style.setProperty('--color-bg2', '#abdbda'); 
+				}
+
+        if (data.Clima.includes('Chuva')) {
+					document.documentElement.style.setProperty('--color-bg1', '#65abcf'); 
+					document.documentElement.style.setProperty('--color-bg2', '#34aeeb'); 
+				}
+
+        if (data.Clima.includes('Chuva leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#7a75ba'); 
+					document.documentElement.style.setProperty('--color-bg2', '#3b3866'); 
+				}
+
+        if (data.Clima.includes('Chuva moderada')) {
+					document.documentElement.style.setProperty('--color-bg1', '#a5e6df'); 
+					document.documentElement.style.setProperty('--color-bg2', '#547a77'); 
+				}
+
+        if (data.Clima.includes('Chuva intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#54e8d9'); 
+					document.documentElement.style.setProperty('--color-bg2', '#1f7a71'); 
+				}
+
+        if (data.Clima.includes('Chuva muito intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#220596'); 
+					document.documentElement.style.setProperty('--color-bg2', '#211552'); 
+				}
+
+        if (data.Clima.includes('Chuva extrema')) {
+					document.documentElement.style.setProperty('--color-bg1', '#0b0136'); 
+					document.documentElement.style.setProperty('--color-bg2', '#2b2640'); 
+				}
+
+        if (data.Clima.includes('Chuva congelante')) {
+					document.documentElement.style.setProperty('--color-bg1', '#044c94'); 
+					document.documentElement.style.setProperty('--color-bg2', '#3e9bf7'); 
+				}
+
+        if (data.Clima.includes('Chuva de baixa intensidade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#7ea5cc'); 
+					document.documentElement.style.setProperty('--color-bg2', '#4b7299'); 
+				}
+
+        if (data.Clima.includes('Chuva')) {
+					document.documentElement.style.setProperty('--color-bg1', '#21588f'); 
+					document.documentElement.style.setProperty('--color-bg2', '#467bb0'); 
+				}
+
+        if (data.Clima.includes('Chuva de alta intensidade')) {
+					document.documentElement.style.setProperty('--color-bg1', '#032dff'); 
+					document.documentElement.style.setProperty('--color-bg2', '#021570'); 
+				}
+
+        if (data.Clima.includes('Chuva irregular')) {
+					document.documentElement.style.setProperty('--color-bg1', '#6095d6'); 
+					document.documentElement.style.setProperty('--color-bg2', '#3581de'); 
+				}
+
+        if (data.Clima.includes('Neve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#8fa8c7'); 
+					document.documentElement.style.setProperty('--color-bg2', '#e9ecf0'); 
+				}
+
+        if (data.Clima.includes('Neve leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#687d96'); 
+					document.documentElement.style.setProperty('--color-bg2', '#8d9db0'); 
+				}
+
+        if (data.Clima.includes('Neve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#95c0f5'); 
+					document.documentElement.style.setProperty('--color-bg2', '#506b8c'); 
+				}
+
+        if (data.Clima.includes('Neve intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#f7f7f7'); 
+					document.documentElement.style.setProperty('--color-bg2', '#acd0fc'); 
+				}
+
+        if (data.Clima.includes('Aguaceiro')) {
+					document.documentElement.style.setProperty('--color-bg1', '#83d3f7'); 
+					document.documentElement.style.setProperty('--color-bg2', '#519bbd'); 
+				}
+
+        if (data.Clima.includes('Aguaceiro leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#82a7b8'); 
+					document.documentElement.style.setProperty('--color-bg2', '#74d1fc'); 
+				}
+
+        if (data.Clima.includes('Aguaceiro')) {
+					document.documentElement.style.setProperty('--color-bg1', '#437a94'); 
+					document.documentElement.style.setProperty('--color-bg2', '#72a2b8'); 
+				}
+
+        if (data.Clima.includes('Chuva e neve leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#edf4f7'); 
+					document.documentElement.style.setProperty('--color-bg2', '#77bfe0'); 
+				}
+
+        if (data.Clima.includes('Chuva e neve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#3fb9f2'); 
+					document.documentElement.style.setProperty('--color-bg2', '#96deff'); 
+				}
+
               }else{
                   tempoResult.innerHTML = "Erro ao obter dados metereologicó";
               }
