--- a/index.html
+++ b/index.html
@@ -258,6 +258,91 @@ console.log(city);
 					document.documentElement.style.setProperty('--color-bg2', '#96deff'); 
 				}
 
+		if (data.Clima.includes('Neve e chuva leve')) {
+					document.documentElement.style.setProperty('--color-bg1', '#d3e3eb'); 
+					document.documentElement.style.setProperty('--color-bg2', '#95d5f5'); 
+				}
+
+		if (data.Clima.includes('Neve e chuva')) {
+					document.documentElement.style.setProperty('--color-bg1', '#66ccff'); 
+					document.documentElement.style.setProperty('--color-bg2', '#8bb5c9'); 
+				}
+
+		if (data.Clima.includes('Neve e chuva intensa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#3bbeff'); 
+					document.documentElement.style.setProperty('--color-bg2', '#286685'); 
+				}
+
+		if (data.Clima.includes('Atmosfera')) {
+					document.documentElement.style.setProperty('--color-bg1', '#a3b7c2'); 
+					document.documentElement.style.setProperty('--color-bg2', '#8db7cc'); 
+				}
+
+		if (data.Clima.includes('Névoa')) {
+					document.documentElement.style.setProperty('--color-bg1', '#b9e4fa'); 
+					document.documentElement.style.setProperty('--color-bg2', '#e0f5ff'); 
+				}
+
+		if (data.Clima.includes('Fumaça')) {
+					document.documentElement.style.setProperty('--color-bg1', '#f5f8fa'); 
+					document.documentElement.style.setProperty('--color-bg2', '#d9dcde'); 
+				}
+
+		if (data.Clima.includes('Neblina')) {
+					document.documentElement.style.setProperty('--color-bg1', '#d2d3d4'); 
+					document.documentElement.style.setProperty('--color-bg2', '#a3a7a8'); 
+				}
+
+		if (data.Clima.includes('Redemoinhos de areia/poeira')) {
+					document.documentElement.style.setProperty('--color-bg1', '#faa952'); 
+					document.documentElement.style.setProperty('--color-bg2', '#bf9465'); 
+				}
+
+		if (data.Clima.includes('Nevoeiro')) {
+					document.documentElement.style.setProperty('--color-bg1', '#fcf4eb'); 
+					document.documentElement.style.setProperty('--color-bg2', '#fffdfa'); 
+				}
+
+		if (data.Clima.includes('Areia')) {
+					document.documentElement.style.setProperty('--color-bg1', '#ba8f61'); 
+					document.documentElement.style.setProperty('--color-bg2', '#947759'); 
+				}
+
+		if (data.Clima.includes('Poeira')) {
+					document.documentElement.style.setProperty('--color-bg1', '#9e6f3e'); 
+					document.documentElement.style.setProperty('--color-bg2', '#c48745'); 
+				}
+
+		if (data.Clima.includes('Cinzas vulcânicas')) {
+					document.documentElement.style.setProperty('--color-bg1', '#4d2d0b'); 
+					document.documentElement.style.setProperty('--color-bg2', '#824607'); 
+				}
+
+		if (data.Clima.includes('Rajadas')) {
+					document.documentElement.style.setProperty('--color-bg1', '#7baee8'); 
+					document.documentElement.style.setProperty('--color-bg2', '#9fc7f5'); 
+				}
+
+		if (data.Clima.includes('Tornado')) {
+					document.documentElement.style.setProperty('--color-bg1', '#54a0f7'); 
+					document.documentElement.style.setProperty('--color-bg2', '#2c88f2'); 
+				}
+
+		if (data.Clima.includes('Céu limpo')) {
+					document.documentElement.style.setProperty('--color-bg1', '#b3d6ff'); 
+					document.documentElement.style.setProperty('--color-bg2', '#a1cdff'); 
+				}
+
+		if (data.Clima.includes('Nuvens')) {
+					document.documentElement.style.setProperty('--color-bg1', '#99ddff'); 
+					document.documentElement.style.setProperty('--color-bg2', '#82d2fa'); 
+				}
+
+		if (data.Clima.includes('céu limpo')) {
+					document.documentElement.style.setProperty('--color-bg1', '#b0dff7'); 
+					document.documentElement.style.setProperty('--color-bg2', '#caeafa'); 
+				}
+
               }else{
                   tempoResult.innerHTML = "Erro ao obter dados metereologicó";
               }
